# privachat_agents

./: .dockerignore  .env.example  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  LICENSE  MIGRATION.md  README.md  RESTRUCTURE_PLAN.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_balanced.json  test_citations_manual.py
.claude/: settings.local.json
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_fts_to_rag_documents.py  003_add_excluded_domains_table.py
docs/: API_CONSUMPTION.md  API_SPECIFICATION.md  ASYNC_SEARCH_IMPLEMENTATION.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_BUILD_QUICK_REFERENCE.md  ML_TEMPORAL_DETECTION.md  SPACY_IMPLEMENTATION_SUMMARY.md
docs/archive/: README.md
docs/tools/: README.md  test-searxng-connectivity.bat  test_research_quick.py
examples/: privachat_sdk.py
privachat_agents/: __init__.py
privachat_agents/agents/: __init__.py  decomposition_validator.py  prompt_strategy.py  search_agent.py  system_prompt_generator.py
privachat_agents/clients/: perplexity_client.py
privachat_agents/core/: circuit_breaker.py  config.py
privachat_agents/database/: __init__.py  init.sql  models.py
privachat_agents/rag/: __init__.py
privachat_agents/services/: redis_client.py  search_orchestrator.py
privachat_agents/utils/: claim_grounder.py  perplexity_mapper.py  query_normalizer.py  response_validator.py  temporal_validator.py
research-service/: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  run_all_tests.bat  run_tests.bat  run_tests.sh  test-connectivity.sh
research-service/alembic/: env.py
research-service/docs/: CASCADING_FALLBACK_IMPLEMENTATION.md  CODEBASE_CLEANUP.md  COMPREHENSIVE_LOGGING.md  DEVELOPMENT_STANDARDS.md  DIVERSITY_ENABLED_SUMMARY.md  INDEX.md  LIBRARY_VERSIONS.md  NO_API_CALLS_FIX.md  PROCESS_FLOWS.md  QUERY_EXPANSION_SUMMARY.md  SEARCH_ACCURACY_ANALYSIS.md  SEARCH_AGENT_IMPROVEMENTS.md  SEARCH_QUERY_FIX.md  STREAMLIT_APP_SPEC.md  STREAMLIT_ARCHITECTURE.md  TEST_COVERAGE_SUMMARY.md  TEST_EXECUTION_SUMMARY.md  (+1 more)
scripts/: README.md
tests/: conftest.py  test_async_quick.py  test_async_search.py  test_balanced_provider_coverage.py  test_both_modes.py  test_generic_comparison_detection.py  test_no_api_calls.py  test_phase1_improvements.py  test_phase1_static.py  test_phase2_static.py  test_phase3_task1_static.py  test_phase3_task2_static.py  test_phase3_task7_static.py
ui/: streamlit_app.py
(+171 files in other folders)
